fixed scrollbar

--- a/css/index.css
+++ b/css/index.css
@@ -52,6 +52,7 @@ table th{
 
 ::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-track {
